# Race_Car_MPCC_Controller

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Doxyfile  README.md  README_crs.md  crs.plantuml  crs_ros.plantuml  requirements.txt
.crs/: crs  (+2 more)
src/crs/commons/: CMakeLists.txt  package.xml
src/crs/commons/include/commons/: dynamic_point_trajectory.h  filter.h  static_track_trajectory.h  trajectory.h  trajectory_spline.h
src/crs/commons/src/: dynamic_point_trajectory.cpp  filter.cpp  static_track_trajectory.cpp  trajectory.cpp  trajectory_spline.cpp
src/crs/commons/test/: track_tests.cpp
src/crs/controls/common/: CMakeLists.txt  package.xml
src/crs/controls/ff_fb_controller/: CMakeLists.txt  package.xml
src/crs/controls/ff_fb_controller/src/: ff_fb_controller.cpp
src/crs/controls/mpc_controller/: CMakeLists.txt  package.xml
src/crs/controls/pid_controller/: CMakeLists.txt  package.xml
src/crs/controls/pid_controller/src/: pacejka_pid_const_ref_controller.cpp  pacejka_pid_controller.cpp
src/crs/controls/pid_controller/test/: pacejka_pid_test.cpp
src/ros4crs/crs_launch/: CMakeLists.txt  package.xml
src/ros4crs/crs_launch/config/: blue_car_visualizer.yaml  green_car_visualizer.yaml  red_car_visualizer.yaml
src/ros4crs/crs_launch/launch/: crs.launch  qualisys_bridge_default.launch  run_single_car.launch  sim_multi_car.launch  sim_single_car.launch  vicon_bridge_default.launch
src/ros4crs/crs_launch/script/: save_and_record.sh
src/ros4crs/crs_launch/test/closed_loop_controller_tests/: controller_test.cpp  ff_fb_controller_test.launch  mpcc_controller_test.launch  mpcc_with_estimator_test.launch  pid_controller_test.launch
src/ros4crs/crs_launch/test/closed_loop_estimator_tests/: estimator_test.cpp
src/ros4crs/crs_msgs/: CMakeLists.txt  package.xml
src/ros4crs/ros_backtracker/: CMakeLists.txt  package.xml
src/ros4crs/ros_backtracker/app/: crash_detector_node.cpp  input_filter_node.cpp  linear_backtracker_node.cpp
src/ros4crs/ros_backtracker/config/: linear_backtrack_config.yaml
src/ros4crs/ros_backtracker/include/ros_backtracker/: crash_detector.h  input_filter.h  linear_backtracker.h
src/ros4crs/ros_backtracker/launch/: default.launch
src/ros4crs/ros_backtracker/src/: crash_detector.cpp  input_filter.cpp  linear_backtracker.cpp
src/ros4crs/ros_battery_monitor/: CMakeLists.txt  package.xml
src/ros4crs/ros_battery_monitor/app/: battery_monitor_node.cpp
src/ros4crs/ros_battery_monitor/config/: battery_monitor_config.yaml
src/ros4crs/ros_battery_monitor/launch/: default.launch
src/ros4crs/ros_controllers/: CMakeLists.txt  package.xml
src/ros4crs/ros_controllers/app/: controller_node.cpp
src/ros4crs/ros_controllers/cfg/: PID.cfg  ff_fb.cfg  pacejka_mpcc.cfg  pacejka_tracking_mpc.cfg
src/ros4crs/ros_controllers/config/: ff_fb_controller.yaml  mpc_controller.yaml  pid_controller.yaml  tracking_mpc_controller.yaml
src/ros4crs/ros_controllers/include/ros_controllers/: component_registry.h  dynamic_config.h  ros_controller.h  ros_joystick_controller.h
src/ros4crs/ros_controllers/launch/: default.launch  default_standalone.launch
src/ros4crs/ros_controllers/src/: component_registry.cpp  dynamic_config.cpp  ros_joystick_controller.cpp
src/ros4crs/ros_controllers/src/trajectory/: dynamic_trajectory_updater.cpp
src/ros4crs/ros_crs_utils/: CMakeLists.txt  package.xml
src/ros4crs/ros_crs_utils/include/ros_crs_utils/: parameter_io.h  rate_limited_subscriber.h  state_message_conversion.h  trajectory_message_conversion.h
src/ros4crs/ros_crs_utils/src/: parameter_io.cpp  parameter_io_ff_fb.cpp  parameter_io_kinematic.cpp  parameter_io_lowpass.cpp  parameter_io_mpc.cpp  parameter_io_pacejka.cpp  parameter_io_pacejka_mpc_safety.cpp  parameter_io_pid.cpp  state_message_conversion_kinematic.cpp  state_message_conversion_pacejka.cpp  trajectory_message_conversion.cpp
src/ros4crs/ros_estimators/: CMakeLists.txt  package.xml
src/ros4crs/ros_estimators/app/: ros_estimation_node.cpp
src/ros4crs/ros_estimators/config/: pacejka_car_ekf.yaml  pacejka_car_lowpass.yaml
src/ros4crs/ros_estimators/launch/: default.launch
src/ros4crs/ros_estimators/src/: component_registry.cpp  data_converter.cpp
src/ros4crs/ros_estimators/test/: pacejka_kalman_test.cpp  pacejka_kalman_test.launch
src/ros4crs/ros_lighthouse_calibration/: CMakeLists.txt  package.xml
src/ros4crs/ros_lighthouse_calibration/app/: lighthouse_calibration_node.cpp
src/ros4crs/ros_lighthouse_calibration/config/: lighthouse_calibration_config.yaml
src/ros4crs/ros_lighthouse_calibration/include/: ootx_decoder.h
src/ros4crs/ros_lighthouse_calibration/launch/: default.launch  lighthouse_calib.launch
src/ros4crs/ros_lighthouse_calibration/src/: ootx_decoder.cpp
src/ros4crs/ros_planners/: CMakeLists.txt  package.xml
src/ros4crs/ros_planners/app/: planner_node.cpp
src/ros4crs/ros_planners/config/: circle_planner.yaml  multi_circle_planner.yaml  multi_lloyd_planner.yaml
src/ros4crs/ros_planners/launch/: default.launch
src/ros4crs/ros_planners/src/: component_registry.cpp
src/ros4crs/ros_safety_framework/: CMakeLists.txt  package.xml
src/ros4crs/ros_safety_framework/app/: safety_filter_node.cpp
src/ros4crs/ros_safety_framework/config/: collision_avoidance.yaml
src/ros4crs/ros_safety_framework/launch/: default.launch
src/ros4crs/ros_safety_framework/src/: component_registry.cpp
src/ros4crs/ros_simulator/: CMakeLists.txt  package.xml
src/ros4crs/ros_simulator/app/: simulation_node.cpp
src/ros4crs/ros_simulator/config/: kinematic_car_simulator.yaml  pacejka_car_simulator.yaml
src/ros4crs/ros_simulator/launch/: default.launch  default_standalone.launch
src/ros4crs/ros_simulator/src/: component_registry.cpp  ros_kinematic_simulator.cpp  ros_pacejka_simulator.cpp
src/ros4crs/ros_simulator/test/: ros_simulator_test.cpp  ros_simulator_test.launch
src/ros4crs/ros_tf_republisher/: CMakeLists.txt  package.xml
src/ros4crs/ros_tf_republisher/app/: republisher_node.cpp
src/ros4crs/ros_tf_republisher/launch/: default.launch
(+376 files in other folders)
