<?xml version="1.0"?>
<package format="2">
  <name>crs_launch</name>
  <version>1.0.0</version>
  <description>Package to group CRS launch files</description>
  <maintainer email="zrene@ethz.ch">zrene</maintainer>

  <license>BSD 2-Clause </license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>ros_crs_utils</depend>
  <depend>message_filters</depend>
  <depend>crs_msgs</depend>
  <depend>eigen_catkin</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
