<?xml version="1.0"?>
<package format="2">
  <name>ros_battery_monitor</name>
  <version>0.0.1</version>
  <description>TODO </description>

  <author email="vogellu@ethz.ch">Lukas Vogel</author>
  <maintainer email="vogellu@ethz.ch">Lukas Vogel</maintainer>

  <license>BSD 2-Clause </license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>crs_msgs</depend>
  <depend>commons</depend>
  <export></export>
</package>