<?xml version="1.0"?>
<package format="2">
  <name>ros_lighthouse_calibration</name>
  <version>0.0.1</version>
  <description>TODO </description>

  <author email="tobias.bodewig@mars.uni-freiburg.de">Tobias Bodewig</author>
  <maintainer email="tobias.bodewig@mars.uni-freiburg.de">Tobias Bodewig</maintainer>

  <license>BSD 2-Clause </license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>crs_msgs</depend>
  <depend>eigen_catkin</depend>
  <depend>ros_crs_utils</depend>
  <export></export>
</package>