<?xml version="1.0"?>
<package format="2">
  <name>ff_fb_controller</name>
  <version>0.0.1</version>
  <description> Package for the Feed Forward Feed Back Controller  </description>

  <author email="zrene@ethz.ch">René Zurbrügg</author>
  <maintainer email="zrene@ethz.ch">René Zurbrügg</maintainer>

  <license>BSD 2-Clause </license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>commons</depend>
  <depend>controls</depend>
  
  <depend>pacejka_model</depend>

  <export></export>
</package>